--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,8 @@
 
         <activity
             android:name=".GameActivity"
-            android:label="@string/app_name">
-
-
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
 
 
             </activity>
