--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,12 +21,21 @@
 
 
         <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+
+              >
+
+
+        </activity>
+
+        <activity
             android:name=".GameActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"  >
 
 
-            </activity>
+        </activity>
 
     </application>
 
